--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OneMillionLines_</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -25,9 +25,19 @@
         </section>
     </header>
     <main>
-        <p>We are Massive Academy. We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>
+        <section id="milieu" class="milieu">
+            <div>
+                <img src="images/academy-brand-med.png" />
+                <h2>WHO WE ARE</h2>
+                <div><hr></div>
+                <p style=" margin-bottom: 0px; margin-top: 0px;">
+                We are Massive Academy. We aim to improve education through both method - effective project-based learning - and material <br> - by teaching skills that are applicable to improving your life today.<br>
+                </p>
+            </div>
+        </section>  
         <section id="features" class="features">
-            <h2>GET INVOLVED</h2>
+            <h2 style="margin: 0px;"><br>GET INVOLVED</h2>
+            <div> <hr> </div>
             <div class="feature-container">
                 <div class="feature">
                     <h3>STUDENTS</h3>
