--- a/index.html
+++ b/index.html
@@ -3,18 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OneMillion</title>
     <link rel="stylesheet" href="style.css">
-    <title>One Million</title>
 </head>
 <body>
     <header>
-
+        <section>
+            <h1>Our goal is to inspire <br>Tallahasse to write 1,000,000 <br>lines of code_</h1>
+            <h2>All over the country people are taking the HOUR OF CODE challenge issued by CODE.org.</h2>
+            <h2>Milions of lines of code are being written.</h2>
+            <h2>In the capital of Florida, Tallahassee, the community is taking the challenge and our goals is to write 1,000,000 lines of code_</h2>
+            <button>Learn more >></button>
+            <img src="./img/code.png" alt="image code">
+        </section>
     </header>
     <main>
-
+        <p>We are Massive Academy. We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>
+        <section id="features" class="features">
+            <h2>GET INVOLVED</h2>
+            <div class="feature-container">
+                <div class="feature">
+                    <h3>STUDENTS</h3>
+                    <p>Want to learn how code? Want to help us get 1,000,000 lines? Click the button below and we' ll let you know how to get involved. Start Learning</p>
+                </div>
+                <div class="feature">
+                    <h3>EDUCATOR</h3>
+                    <p>Want to bring this initiative to your school or institutuion? Awesome! Click the buttonbelow and we'll make it happen.
+                        Join The Initiative</p>
+                </div>
+                <div class="feature">
+                    <h3>SPONSORS</h3>
+                    <p>We love all the support we get to help host more events, and empower more lives with the knowledge of coding. Click to get involved.
+                        Give Support</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
     </footer>
 </body>
+<footer>
+
+</footer>
 </html>
