--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <header>
+        <img src="./img/top-logo.png" alt="logo">
+        <div><span>WHO WE ARE</span><span>GET INVOLVED</span></div>
+    </header>
+    <main>
         <section>
             <h1>Our goal is to inspire <br>Tallahasse to write 1,000,000 <br>lines of code_</h1>
-            <h2>All over the country people are taking the HOUR OF CODE challenge issued by CODE.org.</h2>
-            <h2>Milions of lines of code are being written.</h2>
-            <h2>In the capital of Florida, Tallahassee, the community is taking the challenge and our goals is to write 1,000,000 lines of code_</h2>
+            <h2>All over the country people are taking the HOUR OF CODE challenge issued by CODE.org. <br>Millions of lines of code are being written. In the capital of Florida, Tallahassee, the community is <br>taking the challenge and our goals is to write 1,000,000 lines of code_</h2>
             <button>Learn more >></button>
             <img src="./img/code.png" alt="image code">
         </section>
-    </header>
-    <main>
         <p>We are Massive Academy. We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>
         <section id="features" class="features">
             <h2>GET INVOLVED</h2>
@@ -39,9 +39,6 @@
             </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
 </body>
 <footer>
 
