--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div><span>WHO WE ARE</span><span>GET INVOLVED</span></div>
     </header>
     <main>
-        <section>
+        <section class="hero">
             <h1>Our goal is to inspire <br>Tallahasse to write 1,000,000 <br>lines of code_</h1>
-            <h2>All over the country people are taking the HOUR OF CODE challenge issued by CODE.org. <br>Millions of lines of code are being written. In the capital of Florida, Tallahassee, the community is <br>taking the challenge and our goals is to write 1,000,000 lines of code_</h2>
+            <h2>All over the country people are taking the <strong>HOUR OF CODE</strong> challenge issued by <strong>CODE.org</strong>. <br>Millions of lines of code are being written. In the capital of Florida, Tallahassee, the community is <br>taking the challenge and our goals is to write 1,000,000 lines of code_</h2>
             <button>Learn more >></button>
             <img src="./img/code.png" alt="image code">
         </section>
