--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OneMillionLines_</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -26,41 +27,44 @@
     </header>
     <main>
         <section id="milieu" class="milieu">
-            <div>
-                <img src="images/academy-brand-med.png" />
+            <div style="padding: 50px;">
+                <img src="images/academy-brand-med.png">
                 <h2>WHO WE ARE</h2>
-                <div><hr></div>
+                <div><hr style="margin-right: 580px;margin-left: 580px;"></div>
                 <p style=" margin-bottom: 0px; margin-top: 0px;">
-                We are Massive Academy. We aim to improve education through both method - effective project-based learning - and material <br> - by teaching skills that are applicable to improving your life today.<br>
+                We are <font>MASSIVE Academy</font>. We aim to improve education through both method - effective project-based learning - and material <br> - by teaching skills that are applicable to improving your life today.<br>
                 </p>
             </div>
         </section>  
         <section id="features" class="features">
             <h2 style="margin: 0px;"><br>GET INVOLVED</h2>
-            <div> <hr> </div>
+            <div> <hr style="margin-right: 580px;margin-left: 580px;"> </div>
             <div class="feature-container">
                 <div class="feature">
+                    <i class="fa fa-solid fa-user"></i>
                     <h3>STUDENTS</h3>
-                    <p>Want to learn how code? Want to help us get 1,000,000 lines? Click the button below and we' ll let you know how to get involved. Start Learning</p>
+                    <p>Want to learn how code? Want to <br>help us get 1,000,000 lines? Click <br>the button below and we' ll let you know <br>how to get involved.</p>
+                    <button>Start Learning »</button>
                 </div>
                 <div class="feature">
-                    <h3>EDUCATOR</h3>
-                    <p>Want to bring this initiative to your school or institutuion? Awesome! Click the buttonbelow and we'll make it happen.
-                        Join The Initiative</p>
+                    <i class="fa fa-solid fa-pencil"></i>
+                    <h3>EDUCATORS</h3>
+                    <p>Want to bring this initiative to your<br> school or institutuion? Awesome Click<br> the buttonbelow and we'll make it<br> happen.</p>
+                    <button>Join The Initiative »</button>
                 </div>
                 <div class="feature">
+                    <i class="fa fa-regular fa-money-bill-1"></i>
                     <h3>SPONSORS</h3>
-                    <p>We love all the support we get to help host more events, and empower more lives with the knowledge of coding. Click to get involved.
-                        Give Support</p>
+                    <p>We love all the support we get to help<br> host more events, and empower more<br> lives with the knowledge of coding.<br> Click to get involved.</p>
+                    <button>Give Support »</button>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-
+        <div class="logo2">
+            <img src="images/one-million-bottom-brand.png">
+        </div> 
     </footer>
 </body>
-<footer>
-
-</footer>
 </html>
