--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OneMillion</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -15,32 +16,40 @@
         <section class="hero">
             <h1>Our goal is to inspire <br>Tallahasse to write 1,000,000 <br>lines of code_</h1>
             <h2>All over the country people are taking the <strong>HOUR OF CODE</strong> challenge issued by <strong>CODE.org</strong>. <br>Millions of lines of code are being written. In the capital of Florida, Tallahassee, the community is <br>taking the challenge and our goals is to write 1,000,000 lines of code_</h2>
-            <button>Learn more >></button>
+            <button>Learn more »</button>
             <img src="./img/code.png" alt="image code">
         </section>
-        <p>We are Massive Academy. We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>
-        <section id="features" class="features">
-            <h2>GET INVOLVED</h2>
-            <div class="feature-container">
-                <div class="feature">
-                    <h3>STUDENTS</h3>
-                    <p>Want to learn how code? Want to help us get 1,000,000 lines? Click the button below and we' ll let you know how to get involved. Start Learning</p>
+        <section class="presenting">
+            <img src="./img/academy-brand-med.png" alt="Logo M academy">
+            <p>We are MASSIVE Academy. We aim to improve education throught both method - effective project-based</p>
+            <p>learning - and meterial - by teaching skills that are applicable to improving your life today.</p>
+        </section>
+        <section class="involving">
+            <div>GET INVOLVED</div>
+            <div class="card-container">
+                <div class="card">
+                    <i class="fa-solid fa-user"></i>
+                    <div>STUDENTS</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit veniam ducimus temporibus ut molestiae eius culpa vero asperiores praesentium facilis repudiandae, eos animi itaque! Inventore enim atque iure accusantium voluptatibus?</p>
+                    <button>Start Learning »</button>
                 </div>
-                <div class="feature">
-                    <h3>EDUCATOR</h3>
-                    <p>Want to bring this initiative to your school or institutuion? Awesome! Click the buttonbelow and we'll make it happen.
-                        Join The Initiative</p>
+                <div class="card">
+                    <i class="fa-solid fa-pencil"></i>
+                    <div>EDUCATORS</div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique ratione autem officia recusandae officiis modi possimus commodi, natus dolor temporibus exercitationem dolores! Amet enim deleniti error dolore, odio iusto?</p>
+                    <button>Join the initiative »</button>
                 </div>
-                <div class="feature">
-                    <h3>SPONSORS</h3>
-                    <p>We love all the support we get to help host more events, and empower more lives with the knowledge of coding. Click to get involved.
-                        Give Support</p>
+                <div class="card">
+                    <i class="fa-regular fa-money-bill-1"></i>
+                    <div>SPONSORS</div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam architecto distinctio odit repudiandae saepe! Voluptatum dolor, in tenetur distinctio perferendis non beatae molestias veniam quidem, laborum eum ratione temporibus odit.</p>
+                    <button>Give Support »</button>
                 </div>
             </div>
         </section>
     </main>
+    <footer>
+        <img src="./img/one-million-bottom-brand.png" alt="">
+    </footer>
 </body>
-<footer>
-
-</footer>
 </html>
