--- a/index.html
+++ b/index.html
@@ -9,28 +9,21 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="logo">OneMillionLines_</div>
-            <ul class="nav-links">
-                <li><a href="#pricing">WHO WE ARE</a></li>
-                <li><a href="#contact">GET involved</a></li>
-            </ul>
-        </nav>
-        <section>
-            <H1>Our goal is to inspire Tallahasse to write 1,000,000 lines of code_</H1>
-            <p>
-                All over the country people are taking the HOUR OF CODE challenge issued by CODE.org. Milions of lines of code are being written. 
-                In the capital of Florida, Tallahassee, the community is taking the challenge and our goals is to write 1,000,000 lines of code_
-            </p>
-            <a href="#learnmore" class="cta">Learnmore</a>
-        </section>
+        <img src="./images/logo.png" alt="logo">
+        <div><span>WHO WE ARE</span><span>GET INVOLVED</span></div>
     </header>
     <main>
+        <section class="hero">
+            <h1>Our goal is to inspire <br>Tallahasse to write 1,000,000 <br>lines of code_</h1>
+            <p>All over the country people are taking the <strong>HOUR OF CODE</strong> challenge issued by <strong>CODE.org</strong>. Millions of lines of code<br> are being written. In the capital of Florida, Tallahassee, the community is taking the challenge and our goals is to write<br> 1,000,000 lines of code_</p>
+            <button>Learn more »</button>
+            <img src="./images/code.png" alt="image code">
+        </section>
         <section id="milieu" class="milieu">
             <div style="padding: 50px;">
                 <img src="images/academy-brand-med.png">
                 <h2>WHO WE ARE</h2>
-                <div><hr style="margin-right: 580px;margin-left: 580px;"></div>
+                <div><hr style="margin-right: 730px;margin-left: 730px;"></div>
                 <p style=" margin-bottom: 0px; margin-top: 0px;">
                 We are <font>MASSIVE Academy</font>. We aim to improve education through both method - effective project-based learning - and material <br> - by teaching skills that are applicable to improving your life today.<br>
                 </p>
@@ -38,7 +31,7 @@
         </section>  
         <section id="features" class="features">
             <h2 style="margin: 0px;"><br>GET INVOLVED</h2>
-            <div> <hr style="margin-right: 580px;margin-left: 580px;"> </div>
+            <div> <hr style="margin-right: 780px;margin-left: 777px;"></div>
             <div class="feature-container">
                 <div class="feature">
                     <i class="fa fa-solid fa-user"></i>
