commit avant media queries

--- a/index.html
+++ b/index.html
@@ -21,27 +21,30 @@
         </section>
         <section class="presenting">
             <img src="./img/academy-brand-med.png" alt="Logo M academy">
+            <p>WHO WE ARE</p>
+            <div class="sousligne"></div>
             <p>We are MASSIVE Academy. We aim to improve education throught both method - effective project-based</p>
             <p>learning - and meterial - by teaching skills that are applicable to improving your life today.</p>
         </section>
         <section class="involving">
-            <div>GET INVOLVED</div>
+            <div class="description">GET INVOLVED</div>
+            <div class="sousligne"></div>
             <div class="card-container">
                 <div class="card">
                     <i class="fa-solid fa-user"></i>
-                    <div>STUDENTS</div>
+                    <div class="description">STUDENTS</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit veniam ducimus temporibus ut molestiae eius culpa vero asperiores praesentium facilis repudiandae, eos animi itaque! Inventore enim atque iure accusantium voluptatibus?</p>
                     <button>Start Learning »</button>
                 </div>
                 <div class="card">
                     <i class="fa-solid fa-pencil"></i>
-                    <div>EDUCATORS</div>
+                    <div class="description">EDUCATORS</div>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique ratione autem officia recusandae officiis modi possimus commodi, natus dolor temporibus exercitationem dolores! Amet enim deleniti error dolore, odio iusto?</p>
                     <button>Join the initiative »</button>
                 </div>
                 <div class="card">
                     <i class="fa-regular fa-money-bill-1"></i>
-                    <div>SPONSORS</div>
+                    <div class="description">SPONSORS</div>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam architecto distinctio odit repudiandae saepe! Voluptatum dolor, in tenetur distinctio perferendis non beatae molestias veniam quidem, laborum eum ratione temporibus odit.</p>
                     <button>Give Support »</button>
                 </div>
