--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>WHO WE ARE</p>
             <div class="sousligne"></div>
             <p>We are MASSIVE Academy. We aim to improve education throught both method - effective project-based</p>
-            <p>learning - and meterial - by teaching skills that are applicable to improving your life today.</p>
+            <p>learning - and material - by teaching skills that are applicable to improving your life today.</p>
         </section>
         <section class="involving">
             <div class="description">GET INVOLVED</div>
